--- a/style/main.scss
+++ b/style/main.scss
@@ -317,7 +317,7 @@ hr {
   .tile-inner {
     border-radius: $tile-border-radius;
 
-    background: $tile-color;
+    //background: $tile-color;
     text-align: center;
     font-weight: bold;
     z-index: 10;
@@ -371,7 +371,9 @@ hr {
       }
 
       // Set background
-      background: $mixed-background;
+      //background: $mixed-background;
+      background: url("../img/logo_11.png");
+      background-size: 100%;
 
       // Add glow
       $glow-opacity: max($exponent - 4, 0) / ($limit - 4);
